--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "paper_trade_app",
-    "short_name": "paper_trade_app",
+    "name": "Paper Trade",
+    "short_name": "Paper Trade",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#0A0E1A",
+    "theme_color": "#00D9B5",
+    "description": "Master the markets without the risk",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
