--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   firebase_auth: ^5.3.3
   google_sign_in: ^6.2.2
   cloud_firestore: ^5.5.2
+  file_picker: ^8.0.0
+  csv: ^6.0.0
 
 
 dev_dependencies:
